--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <head>
     <meta charset="uft-8"/>
     <title> web design </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/app.css"/>
+    
 </head>
 <body>
 <h1>Đề tài: Phân tích ưu và nhược điểm của các công nghệ sản xuất điện từ năng lượng tái tạo. Thể hiện ý tưởng và quan điểm cá nhân về các loại công nghệ này.</h1>
@@ -40,4 +45,4 @@
         </tbody>
     </table>
 </body>
-</html>
+</html>          
